# woice

./: .gitignore  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
examples/: wifionice.sh
woice/: woice.py
