[tool.poetry]
name = "woice"
version = "0.0.4"
description = "A small python script that helps to connect to the WiFiOnICE network on ICE trains."
authors = ["Ansgar Kellner <keans@gmx.de>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.9.3"
requests = "^2.31.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
woice = "woice.woice:cli"
